test/libhyperion/syntaxTests/receiveEther/arguments.hyp
contract C {
    receive(uint256) external payable {}
}
// ----
// DeclarationError 6857: (24-33): Receive znd function cannot take parameters.
